k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hotel-service
  template:
    metadata:
      labels:
        app: hotel-service
    spec:
      containers:
        - name: hotel-service
          image: "${ACR_NAME}.azurecr.io/hotel_service:${IMAGE_TAG}"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
