k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: hotel.example.com
      http:
        paths:
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: hotel-service
                port:
                  number: 80
